--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -7,6 +7,7 @@
   --color-white: #ffffff;
   --color-dark: #131E30;
   --color-loader-bg: #eaeaea;
+  --color-calculator-bg: #F4F2F2;
 
   /* Z-index */
   --z-loader: 9999;
