--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -80,7 +80,7 @@ const t = useTranslations(lang);
   }
 
   .hero__intro {
-    font-size: var(--font-size-small);
+    font-size: var(--font-size-body);
     line-height: 1.35;
     max-width: 300px;
   }
@@ -98,7 +98,7 @@ const t = useTranslations(lang);
     .hero__intro {
       margin-top: var(--space-lg);
       padding-left: 190px;
-      max-width: 460px;
+      max-width: 500px;
     }
   }
 
