--- a/src/components/Houses.astro
+++ b/src/components/Houses.astro
@@ -176,13 +176,14 @@ const t = translations.houses;
   }
 
   .houses__cell--price {
-    grid-column: 1 / -1;
-    font-size: 1.125rem;
+    grid-column: 2;
     font-weight: 500;
+    justify-self: start;
+    text-align: left;
   }
 
   .houses__cell--plan {
-    grid-column: 1 / -1;
+    grid-column: 1;
   }
 
   .houses__download {
