reordenar nav links del header

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -12,7 +12,7 @@ const galleryImages = [
 ];
 ---
 
-<section class="welcome" id="welcome">
+<section class="welcome residence" id="residence">
   <div class="welcome__container">
     <!-- Left column: Text content -->
     <div class="welcome__content">
